Fix unwanted horizontal scrolling

--- a/src/index.css
+++ b/src/index.css
@@ -30,8 +30,6 @@
   --color-heading: #ccd6f6;
   --color-body: #8892b0;
   --navy-shadow: rgba(2, 12, 27, 0.7);
-  /* fonts */
-  --font-mono: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", monospace;
 
 
 }
@@ -40,13 +38,16 @@
 * {
   margin: 0;
   padding: 0;
+  overflow-x: visible;
+  /* outline: 1px solid rgb(104, 104, 104); */
+  /* opacity: 1 !important; */
+  /* visibility: visible !important; */
 
 }
 
 
 html {
   scroll-behavior: smooth;
-  /* scroll-padding: -200; */
   scroll-padding-top: 150px;
 }
 
@@ -67,6 +68,7 @@ html {
 
 body {
   background-color: #0a192f;
+  /* overflow-x: hidden; */
 }
 
 /* list */
